--- a/templates/admin/create_post.html
+++ b/templates/admin/create_post.html
@@ -1,12 +1,16 @@
- {% extends 'base.html' %}
-     {% block title %}Create Post{% endblock %}
-     {% block content %}
-     <h2>Create New Blog Post</h2>
-     <form method="POST">
-         <label for="title">Title:</label>
-         <input type="text" name="title" id="title" required>
-         <label for="content">Content:</label>
-         <textarea name="content" id="content" required></textarea>
-         <button type="submit">Create Post</button>
-     </form>
-     {% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}Create Post{% endblock %}
+
+{% block content %}
+<h2>Create a New Blog Post</h2>
+<form action="{{ url_for('create_post') }}" method="POST">
+    <label for="title">Title</label>
+    <input type="text" id="title" name="title" required>
+
+    <label for="content">Content</label>
+    <textarea id="content" name="content" required></textarea>
+
+    <button type="submit">Create Post</button>
+</form>
+{% endblock %}
