--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,17 +1,19 @@
 {% extends 'base.html' %}
-     {% block title %}Admin Dashboard{% endblock %}
-     {% block content %}
-     <h2>Admin Dashboard</h2>
-     <a href="{{ url_for('create_post') }}">Create New Post</a>
-     <ul>
-         {% for post in posts %}
-         <li>
-             <h3>{{ post.title }}</h3>
-             <a href="{{ url_for('edit_post', post_id=post.id) }}">Edit</a>
-             <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST" style="display:inline;">
-                 <button type="submit">Delete</button>
-             </form>
-         </li>
-         {% endfor %}
-     </ul>
-     {% endblock %}
+
+{% block title %}Admin Dashboard{% endblock %}
+
+{% block content %}
+<h2>Admin Dashboard</h2>
+<a href="{{ url_for('create_post') }}" class="btn">Create New Post</a>
+<ul>
+    {% for post in posts %}
+    <li>
+        <h4>{{ post.title }}</h4>
+        <a href="{{ url_for('edit_post', post_id=post.id) }}">Edit</a>
+        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+            <button type="submit">Delete</button>
+        </form>
+    </li>
+    {% endfor %}
+</ul>
+{% endblock %}
