--- a/templates/admin/edit_post.html
+++ b/templates/admin/edit_post.html
@@ -1,12 +1,16 @@
- {% extends 'base.html' %}
-     {% block title %}Edit Post{% endblock %}
-     {% block content %}
-     <h2>Edit Blog Post</h2>
-     <form method="POST">
-         <label for="title">Title:</label>
-         <input type="text" name="title" id="title" value="{{ post.title }}" required>
-         <label for="content">Content:</label>
-         <textarea name="content" id="content" required>{{ post.content }}</textarea>
-         <button type="submit">Update Post</button>
-     </form>
-     {% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}Edit Post{% endblock %}
+
+{% block content %}
+<h2>Edit Blog Post</h2>
+<form action="{{ url_for('edit_post', post_id=post.id) }}" method="POST">
+    <label for="title">Title</label>
+    <input type="text" id="title" name="title" value="{{ post.title }}" required>
+
+    <label for="content">Content</label>
+    <textarea id="content" name="content" required>{{ post.content }}</textarea>
+
+    <button type="submit">Update Post</button>
+</form>
+{% endblock %}
