--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,8 +1,16 @@
- {% extends 'base.html' %}
- {% block title %}Blog{% endblock %}
- {% block content %}
- <h2>Latest Blogs</h2>
- <div class="blog-list">
-     <!-- Blog posts will be displayed here -->
- </div>
- {% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}Blog Home{% endblock %}
+
+{% block content %}
+<h2>Latest Blog Posts</h2>
+<div class="blog-posts">
+    {% for post in posts %}
+    <div class="blog-post">
+        <h3><a href="{{ url_for('view_post', post_id=post.id) }}">{{ post.title }}</a></h3>
+        <p>{{ post.content[:150] }}...</p>
+        <a href="{{ url_for('view_post', post_id=post.id) }}" class="read-more">Read More</a>
+    </div>
+    {% endfor %}
+</div>
+{% endblock %}
