--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,6 +215,131 @@ body {
         object-fit: cover; /* Ensure the image covers the whole section */
         display: block;
     }
+    /* About Section Styles */
+    .about-section {
+        text-align: center;
+        padding: 50px;
+        background-color: #f9f9f9;
+    }
+    .about-text {
+        padding: 0 15%;
+    }
+    .about-text p:first-of-type {
+        font-weight: 600;
+        font-size: 2em;
+        color: #002b49;
+        margin-bottom: 20px;
+    }
+    .about-text p {
+        font-size: 1.2em;
+        color: #002b49;
+        line-height: 1.8;
+        margin: 10px 0;
+    }
+    .achievements {
+        display: flex;
+        justify-content: center;
+        gap: 100px;
+        margin-top: 50px;
+    }
+    .achievement {
+        text-align: center;
+    }
+    .achievement h2 {
+        color: #c59542;
+        font-size: 3em;
+        font-weight: 700;
+        margin-bottom: 5px;
+    }
+    .achievement p {
+        color: #666;
+        font-size: 1.1em;
+        font-weight: 500;
+    }
+     /* New Image Section Styles */
+    .image-section {
+        position: relative;
+        width: 100%;
+        height: 60vh;
+        overflow: hidden;
+    }
+
+    .image-full {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
+  /* Stay Updated Section Styles */
+    .stay-updated {
+        text-align: center;
+        padding: 50px;
+        background-color: #fff;
+        margin-top: 50px;
+    }
+
+    .stay-updated-title {
+        font-size: 2em;
+        color: #c59542; /* Gold-like color */
+        font-weight: 700;
+        margin-bottom: 20px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 40px; /* Adjust the space between the text and the lines */
+        padding-right: 10px;
+    }
+
+    .stay-updated-title::before,
+    .stay-updated-title::after {
+        content: "";
+        width: 500px; /* Adjust this value to decrease or increase line length */
+        height: 1px;
+        background: #000;
+    }
+
+    .stay-updated p {
+        font-size: 1.2em;
+        color: #333;
+        margin-bottom: 30px;
+    }
+
+    .subscription-form {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .email-input {
+        padding: 10px;
+        font-size: 1em;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        width: 900px;
+        height: 60px;
+    }
+
+    .submit-button {
+        padding: 10px 20px;
+        font-size: 1em;
+        color: #fff;
+        background-color: #c59542;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        height: 60px;
+    }
+
+    .submit-button:hover {
+        background-color: #a47630;
+    }
+
+
+
+
+
 
     /* Responsive Styles */
     @media (max-width: 768px) {
@@ -226,12 +351,32 @@ body {
         .container {
             padding: 15px;
         }
+
+        .achievements {
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        .image-section {
+            height: 40vh;
+        }
+         .email-input {
+            width: 70%;
+        }
+
     }
+
+
+
+
+
 
     @media (max-width: 480px) {
         .hero-section {
             height: calc(100vh - 60px); /* Adjust according to smaller navbar height */
             margin-top: 0px;
+             /*height: 40vh;*/
+
         }
 
         .container {
@@ -245,4 +390,24 @@ body {
         p {
             font-size: 1em;
         }
+        .about-text {
+            padding: 0 5%;
+        }
+
+        .achievement h2 {
+            font-size: 2.5em;
+        }
+
+        .image-section {
+            height: 30vh;
+        }
+          .email-input {
+            width: 110%;
+        }
+
+        .subscription-form {
+            flex-direction: column;
+            gap: 20px;
+        }
+
     }
