--- a/templates/index.html
+++ b/templates/index.html
@@ -45,4 +45,18 @@
             </div>
         </form>
     </section>
+
+<hr class="line-breaker">
+
+    <section class="locate-us">
+        <h2 class="locate-us-title">LOCATE US</h2>
+        <p class="locate-us-subtitle">We have built 7+ projects across the residential segment</p>
+        <div class="locate-us-image">
+            <img src="{{ url_for('static', filename='images/locateus.webp') }}" alt="Locate Us Map" class="map-image">
+        </div>
+        <div class="know-more-button-container">
+            <button class="know-more-button">KNOW MORE</button>
+        </div>
+    </section>
+
 {% endblock %}
