--- a/templates/index.html
+++ b/templates/index.html
@@ -58,5 +58,41 @@
             <button class="know-more-button">KNOW MORE</button>
         </div>
     </section>
+    <!-- Featured Projects Section -->
+<section class="featured-projects">
+    <h2 class="featured-projects-title">FEATURED PROJECTS</h2>
+    <p class="featured-projects-subtitle">We have built 42+ projects across residential and commercial segments</p>
+    <div class="carousel-container">
+        <div class="carousel">
+            <a href="{{ url_for('saburi_project') }}" class="project-link">
+                <div class="project">
+                    <img src="{{ url_for('static', filename='projects/saburi/2.png') }}" alt="Project 1">
+                    <h3>Shree Mahalakshmi Saburi</h3>
+                    <p>Santacruz</p>
+                </div>
+            </a>
+            <a href="{{ url_for('maha_kunj_project') }}" class="project-link">
+                <div class="project">
+                    <img src="{{ url_for('static', filename='projects/maha_kunj/1.png') }}" alt="Project 2">
+                    <h3>Shree Mahalakshmi Kunj</h3>
+                    <p>Vile Parle</p>
+                </div>
+            </a>
+            <a href="{{ url_for('maha_res_project') }}" class="project-link">
+                <div class="project">
+                    <img src="{{ url_for('static', filename='projects/maha_res/3.png') }}" alt="Project 3">
+                    <h3>Shree Mahalakshmi Residency</h3>
+                    <p>Mahim West</p>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="arrow-buttons">
+        <button class="carousel-arrow left-arrow" onclick="moveSlide(-1)">&#8249;</button>
+        <button class="carousel-arrow right-arrow" onclick="moveSlide(1)">&#8250;</button>
+    </div>
+</section>
+
+
 
 {% endblock %}
