--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,11 +5,14 @@
 {% block content %}
 <h2>Latest Blog Posts</h2>
 <div class="blog-posts">
-    {% for post in posts %}
+    {% for post in blog_posts %}
     <div class="blog-post">
-        <h3><a href="{{ url_for('view_post', post_id=post.id) }}">{{ post.title }}</a></h3>
+        {% if post.image %}
+        <img src="{{ url_for('static', filename='uploads/' + post.image) }}" alt="{{ post.title }}">
+        {% endif %}
+        <h3><a href="{{ url_for('view_blog', blog_id=post.id) }}">{{ post.title }}</a></h3>
         <p>{{ post.content[:150] }}...</p>
-        <a href="{{ url_for('view_post', post_id=post.id) }}" class="read-more">Read More</a>
+        <a href="{{ url_for('view_blog', blog_id=post.id) }}" class="read-more">Read More</a>
     </div>
     {% endfor %}
 </div>
