--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,9 @@
     </div>
 </section>
 
-<section class="blogs-news">
+<section id="blogs" class="blogs-news">
+    <br>
+    <br>
     <h2 class="blogs-news-title">BLOGS AND NEWS</h2>
     <p class="blogs-news-subtitle">Read our latest blogs to stay informed</p>
     <div class="carousel-container">
