--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Shree Mahalakshmi Constructions</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo_noName.png') }}">
+
 </head>
 
-<body>
     <!-- Navigation Bar -->
     <nav class="navbar" id="navbar">
         <button class="menu-icon" aria-label="Toggle navigation menu" onclick="toggleMenu()">
