--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+<body>
+    <div id="preloader">
+        <video id="preloader-video" autoplay muted playsinline>
+            <source src="{{ url_for('static', filename='videos/shiny.mp4') }}" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
     <!-- Hero Section -->
     <section class="hero-section">
         <img src="{{ url_for('static', filename='images/hero.webp') }}" alt="Hero Image" class="hero-image">
@@ -159,6 +167,62 @@
     </div>
 </section>
 
+<style>
+    /* Preloader Styles */
+    #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fff; /* Background color for preloader */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999; /* High z-index to keep it above everything else */
+        overflow: hidden; /* Prevent scrolling while the preloader is active */
+    }
+
+    #preloader video {
+        width: 100%;
+        max-width: 800px; /* Limit the maximum size of the video */
+        height: auto;
+    }
+    .preloader-hidden {
+        opacity: 0;
+        transition: opacity 0.5s ease-out;
+        pointer-events: none; /* Prevent any interaction after hiding */
+    }
+    .preloader-hidden.hidden {
+        display: none; /* Remove from the DOM completely after the transition */
+    }
+</style>
+<script>
+ document.addEventListener("DOMContentLoaded", function() {
+        // Check if the preloader has already been displayed
+        if (!sessionStorage.getItem("preloaderDisplayed")) {
+            // Display the preloader
+            const preloader = document.getElementById("preloader");
+            window.onload = function() {
+                // Set a timeout to hide the preloader after 10 seconds
+                setTimeout(function() {
+                    preloader.classList.add("preloader-hidden");
+
+                    // Remove the preloader completely after the fade-out transition ends
+                    preloader.addEventListener("transitionend", function() {
+                        preloader.style.display = "none";
+                        // Set session storage to avoid showing preloader again
+                        sessionStorage.setItem("preloaderDisplayed", "true");
+                    });
+                }, 5000); // 10000 milliseconds = 10 seconds
+            };
+        } else {
+            // Hide the preloader immediately if it's already been displayed
+            document.getElementById("preloader").style.display = "none";
+        }
+    });
+
+</script>
 
 
 {% endblock %}
